[package]
name = "eyebulbz"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.3.1",  features = ["defmt"] }
embassy-sync = { version = "0.7.0",  features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.6.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

embedded-graphics = "0.8.1"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0"

mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
display-interface = "0.5.0"

tinyqoi = "0.2.0"
embedded-graphics-core = "0.4.0"
#lcd-async = "0.1.1"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
