[package]
edition = "2021"
name = "eyebulbz_pico2"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.4.0",  features = ["defmt"] }
embassy-sync = { version = "0.7.1",  features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.7.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa","binary-info"] }

embedded-graphics = "0.8.1"
lcd-async = "0.1.1"
tinyqoi = "0.2.0"


rand = {version="0.9",default-features = false }
static_cell = { version = "2.1.1" }
num_enum = {version="0.7.4",default-features = false}

# If you're not going to use a Board Support Package you'll need these:
rp235x-hal = { version = "0.3", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
] }

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3
